--- a/python/berkeley-hackathon/shopping_agents/configs/agent.yml
+++ b/python/berkeley-hackathon/shopping_agents/configs/agent.yml
@@ -4,7 +4,7 @@ AGENT:
   TASK: null
 
 MODEL:
-  MODEL_API_KEY: 
+  MODEL_API_KEY: sk-sfaigcvctzxozqqmfjvrmetdhkbcakdltqxsewjpvqupmmhd
   MODEL_NAME: deepseek-ai/DeepSeek-V2-Chat
   MODEL_MAX_TOKENS: 2048
   MODEL_API_URL: https://api.siliconflow.cn/v1/chat/completions
