--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -35,7 +35,7 @@ langchain-openai==0.1.25
 langchain-community==0.2.17
 langchain_cohere==0.1.9
 langchain_postgres==0.0.12
-openai==1.51.0
+openai
 duckduckgo-search==6.2.13
 whisper==1.1.10
 arxiv==2.1.3
