--- a/python/berkeley-hackathon/shopping_agents/shopping_dataflow.yml
+++ b/python/berkeley-hackathon/shopping_agents/shopping_dataflow.yml
@@ -4,10 +4,12 @@ nodes:
     path: dynamic
     outputs:
       - user_input
+      - shopping_solution_user_input
     inputs:
       user_shopping_requirement_status: user-shopping-requirement-agent/user_shopping_requirement_status
       shopping_planning_status: shopping-plan-agent/shopping_planning_status
       amazon_shopping_result: amazon-agent/amazon_shopping_result
+      shopping_solution_result: shopping-solution-agent/shopping_solution_result
   - id: user-shopping-requirement-agent
     operator:
       python: scripts/user_shopping_requirement_agent.py
@@ -32,3 +34,13 @@ nodes:
         web_search_task: shopping-plan-agent/shopping_planning_result
       outputs:
         - amazon_shopping_result
+  - id: shopping-solution-agent
+    operator:
+      python: scripts/shopping_solution_agent.py
+      inputs:
+        shopping_planning_result: shopping-plan-agent/shopping_planning_result
+        product_data: amazon-agent/amazon_shopping_result
+        shopping_solution_user_input: hitl-agent/shopping_solution_user_input
+      outputs:
+        - shopping_solution_status
+        - shopping_solution_result
