1. fix dataflow bug

--- a/python/berkeley-hackathon/shopping_agents/shopping_dataflow.yml
+++ b/python/berkeley-hackathon/shopping_agents/shopping_dataflow.yml
@@ -88,6 +88,7 @@ nodes:
         balsamhill_search: shopping-plan-agent/balsamhill_search
       outputs:
         - balsamhill_shopping_result
+        - balsamhill_agent_status
 
   - id: shopping-solution-agent
     operator:
