1. Added a new runtime environment for `hitl-cmd`. 2. Introduced two new shopping agents: `christmaslightsetc_agent.py` and `notonthehighstreet_agent.py`. 3. Completed the addition of agent content in the dataflow.

--- a/python/berkeley-hackathon/shopping_agents/configs/shopping_agent.yml
+++ b/python/berkeley-hackathon/shopping_agents/configs/shopping_agent.yml
@@ -20,3 +20,13 @@ minted_agent:
 balsamhill_agent:
   inputs: balsamhill_search
   outputs: balsamhill_shopping_result
+
+
+christmaslightsetc_agent:
+  inputs: christmaslightsetc_search
+  outputs: christmaslightsetc_shopping_result
+
+
+notonthehighstreet_agent:
+  inputs: notonthehighstreet_search
+  outputs: notonthehighstreet_shopping_result
