1. fix More bug 2. update prompt

--- a/python/berkeley-hackathon/shopping_agents/configs/shopping_agent.yml
+++ b/python/berkeley-hackathon/shopping_agents/configs/shopping_agent.yml
@@ -1,6 +1,6 @@
-amazon_agent:
-  inputs: amazon_search
-  outputs: amazon_shopping_result
+#amazon_agent:
+#  inputs: amazon_search
+#  outputs: amazon_shopping_result
 
 bronners_agent:
   inputs: bronners_search
